# allassignmens-32

./: .gitignore  README.md  bringup.sh  lidar_info.txt  lidar_info2.txt  sub.py
.github/workflows/: ci.yml
src/camera-task/camera-task/: CAMnode.py  GUInode.py  PRCnode.py  camera.py
src/camera_task/: package.xml  setup.py
src/camera_task/camera_task/: camera.py  image_display.py  image_process.py
src/camera_task/camera_task/install/: local_setup.sh  setup.sh
src/camera_task/camera_task/log/: latest_build
src/camera_task/install/: local_setup.sh  setup.sh
src/camera_task/install/camera_task/share/camera_task/: package.sh
src/camera_task/launch/: launchfile.py
src/camera_task/log/: latest_build
src/camera_task/test/: test_allNodes.py  test_camera.py  test_display.py  test_process.py
src/camera_task/tflite_models/: labels.yaml
src/demo_package/demo_package/: sub.py
src/diverse/: interface.py  plot_lidar.py
src/imcappkg/: CAMnode.py  PRCnode.py  imcap.py  verifyVideo.py
src/mapping_node/: package.xml  setup.cfg  setup.py
src/mapping_node/mapping_node/: cone_assignment.py
src/remote_control_task/: package.xml  setup.cfg  setup.py
src/remote_control_task/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/remote_control_task/install/remote_control_task/share/remote_control_task/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/remote_control_task/log/: latest_build
src/remote_control_task/remote_control_task/: remote_control.py
src/remote_control_task/test/: test_remotecontrol.py
