<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_task</name>
  <version>2022.11.0</version>
  <description>This package contains custom messages for the AVAI lecture</description>
  <maintainer email="nicolas.kuhl@rub.de">ubuntu</maintainer>
  <license>Apache License, Version 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>yolov5</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>datetime</exec_depend>
  <exec_depend>pathlib</exec_depend>
  <exec_depend>importlib</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>cv2</test_depend>
  <test_depend>pytest</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>cv_bridge</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>unittest</test_depend>
  <test_depend>unittest.mock</test_depend>
  <test_depend>os</test_depend>
  <test_depend>sys</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>pytest-timeout</test_depend>
  <test_depend>torch</test_depend>
  <test_depend>yolov5</test_depend>
  <test_depend>importlib</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
