<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>remote_control_task</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chipsliebhaber@gmail.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>tty</exec_depend>
  <exec_depend>termios</exec_depend>

  <test_depend>rclpy</test_depend>
  <test_depend>unittest</test_depend>
  <test_depend>unittest.mock</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
